force-app/main/default/objects/Scheme_Slab__c/Scheme_Slab__c.object-meta.xml
<CustomObject>
    <label>Scheme Slab</label>
    <pluralLabel>Scheme Slabs</pluralLabel>
    <nameField>
        <label>Scheme Slab Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Quantity or value based slabs within a Scheme defining discount tiers and free product rewards (MOD-07 Scheme and Promotion Management)</description>
</CustomObject>