force-app/main/default/objects/Scheme_Slab__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
                <default>true</default>
                <label>Percent</label>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Free Product</fullName>
            </value>
            <value>
                <fullName>Price Discount</fullName>
            </value>
            <value>
                <fullName>Reward Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>