force-app/main/default/objects/Scheme_Slab__c/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <label>Discount Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>