force-app/main/default/objects/Scheme_Slab__c/fields/Free_Product__c.field-meta.xml
<CustomField>
    <fullName>Free_Product__c</fullName>
    <label>Free Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Scheme Slabs (Free Product)</relationshipLabel>
    <relationshipName>Scheme_Slabs_Free</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>