force-app/main/default/objects/Scheme_Slab__c/fields/Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_Discount__c</fullName>
    <label>Price Discount</label>
    <description>Flat amount discount for this slab tier</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>