force-app/main/default/objects/Scheme_Slab__c/fields/Slab_Type__c.field-meta.xml
<CustomField>
    <fullName>Slab_Type__c</fullName>
    <label>Slab Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
                <default>true</default>
                <label>Quantity</label>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>